# hsmw-bot

./: bot.py  multiply.py  pyproject.toml  test_pawel.py
