[tool.poetry]
name = "hsmw-bot"
version = "0.1.0"
description = ""
authors = ["Alexander Schaub <alexander.schaub@helixton.de>"]
readme = "README.md"
packages = [{include = "hsmw_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
